[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/characters/platformer_sprite72.png" type="Texture" id=1]
[ext_resource path="res://Sprites/characters/imageedit_1_6097912862.png" type="Texture" id=2]
[ext_resource path="res://Sprites/characters/platformer_sprite69.png" type="Texture" id=3]
[ext_resource path="res://Sprites/characters/platformer_sprite71.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Snake.gd" type="Script" id=5]
[ext_resource path="res://Sprites/characters/platformer_sprite70.png" type="Texture" id=6]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/kill.wav" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.09373, 9.50422 )

[sub_resource type="Animation" id=3]
resource_name = "damage"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "rest"
length = 0.2

[node name="Snake" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.320698, -6.82553 )
scale = Vector2( 1.53792, 1.29744 )
frames = SubResource( 1 )
animation = "walk"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.310001, 2.74797 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 7.13375, 0.970001 )
enabled = true
cast_to = Vector2( 1, 12 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 7.21981, 0 )

[node name="Killed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -17.0

[node name="InvulnerabillityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 3 )
anims/flash = SubResource( 4 )
anims/rest = SubResource( 5 )

[node name="HealthBar" parent="." instance=ExtResource( 7 )]
margin_left = -8.36625
margin_top = -6.91125
margin_right = 31.6338
margin_bottom = 33.0888
rect_scale = Vector2( 0.08, 0.1 )
[connection signal="healt_updated" from="." to="HealthBar" method="_on_Snake_healt_updated"]
[connection signal="max_health" from="." to="HealthBar" method="_on_Snake_max_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="InvulnerabillityTimer" to="." method="_on_InvulnerabillityTimer_timeout"]
